tests/ui/pin-ergonomics/pattern-matching.normal.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:41:9
   |
LL |     let Foo { x, y } = foo_mut;
   |         ^^^^^^^^^^^^   ------- this expression has type `Pin<&mut Foo<T, U>>`
   |         |
   |         expected `Pin<&mut Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&mut Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     let Foo { x, y } = *foo_mut;
   |                        +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:46:9
   |
LL |     let Foo { x, y } = foo_const;
   |         ^^^^^^^^^^^^   --------- this expression has type `Pin<&Foo<T, U>>`
   |         |
   |         expected `Pin<&Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     let Foo { x, y } = *foo_const;
   |                        +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:54:9
   |
LL |     let Foo { x, .. } = foo_mut;
   |         ^^^^^^^^^^^^^   ------- this expression has type `Pin<&mut Foo<T, U>>`
   |         |
   |         expected `Pin<&mut Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&mut Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     let Foo { x, .. } = *foo_mut;
   |                         +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:58:9
   |
LL |     let Foo { x, .. } = foo_const;
   |         ^^^^^^^^^^^^^   --------- this expression has type `Pin<&Foo<T, U>>`
   |         |
   |         expected `Pin<&Foo<T, U>>`, found `Foo<_, _>`
   |
   = note: expected struct `Pin<&Foo<T, U>>`
              found struct `Foo<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     let Foo { x, .. } = *foo_const;
   |                         +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:68:9
   |
LL |     let NegUnpinFoo { x, y } = foo_mut;
   |         ^^^^^^^^^^^^^^^^^^^^   ------- this expression has type `Pin<&mut NegUnpinFoo<T, U>>`
   |         |
   |         expected `Pin<&mut NegUnpinFoo<T, U>>`, found `NegUnpinFoo<_, _>`
   |
   = note: expected struct `Pin<&mut NegUnpinFoo<T, U>>`
              found struct `NegUnpinFoo<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     let NegUnpinFoo { x, y } = *foo_mut;
   |                                +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:73:9
   |
LL |     let NegUnpinFoo { x, y } = foo_const;
   |         ^^^^^^^^^^^^^^^^^^^^   --------- this expression has type `Pin<&NegUnpinFoo<T, U>>`
   |         |
   |         expected `Pin<&NegUnpinFoo<T, U>>`, found `NegUnpinFoo<_, _>`
   |
   = note: expected struct `Pin<&NegUnpinFoo<T, U>>`
              found struct `NegUnpinFoo<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     let NegUnpinFoo { x, y } = *foo_const;
   |                                +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:85:9
   |
LL |     match bar_mut {
   |           ------- this expression has type `Pin<&mut NegUnpinBar<T, U>>`
LL |         NegUnpinBar::Foo(x, y) => {
   |         ^^^^^^^^^^^^^^^^^^^^^^ expected `Pin<&mut NegUnpinBar<T, U>>`, found `NegUnpinBar<_, _>`
   |
   = note: expected struct `Pin<&mut NegUnpinBar<T, U>>`
                found enum `NegUnpinBar<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match *bar_mut {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:90:18
   |
LL |         _ if let NegUnpinBar::Bar { x, y } = bar_mut => {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^   ------- this expression has type `Pin<&mut NegUnpinBar<T, U>>`
   |                  |
   |                  expected `Pin<&mut NegUnpinBar<T, U>>`, found `NegUnpinBar<_, _>`
   |
   = note: expected struct `Pin<&mut NegUnpinBar<T, U>>`
                found enum `NegUnpinBar<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |         _ if let NegUnpinBar::Bar { x, y } = *bar_mut => {
   |                                              +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:98:9
   |
LL |     match bar_const {
   |           --------- this expression has type `Pin<&NegUnpinBar<T, U>>`
LL |         NegUnpinBar::Bar { x, y } => {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Pin<&NegUnpinBar<T, U>>`, found `NegUnpinBar<_, _>`
   |
   = note: expected struct `Pin<&NegUnpinBar<T, U>>`
                found enum `NegUnpinBar<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |     match *bar_const {
   |           +

error[E0308]: mismatched types
  --> $DIR/pattern-matching.rs:103:18
   |
LL |         _ if let NegUnpinBar::Foo(x, y) = bar_const => {
   |                  ^^^^^^^^^^^^^^^^^^^^^^   --------- this expression has type `Pin<&NegUnpinBar<T, U>>`
   |                  |
   |                  expected `Pin<&NegUnpinBar<T, U>>`, found `NegUnpinBar<_, _>`
   |
   = note: expected struct `Pin<&NegUnpinBar<T, U>>`
                found enum `NegUnpinBar<_, _>`
help: consider dereferencing to access the inner value using the Deref trait
   |
LL |         _ if let NegUnpinBar::Foo(x, y) = *bar_const => {
   |                                           +

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0308`.
